--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/scss/bootstrap';
+@import '~@fontsource/open-sans';
+
+body {
+  background-color: #303030;
+  font-family: 'Open Sans', sans-serif;
+}
